--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
   "name": "Blood Order Genius",
   "version": "1.0",
   "description": "A plugin helps you ordering blood products through 'https://dh.blood.org.tw/hospital/'",
-  "permissions": [],
+  "permissions": ["storage"],
   "action": {
     "default_popup": "popup.html"
   },
@@ -20,7 +20,9 @@
       "css": ["confirm.css"]
     },
     {
-      "matches": ["https://dh.blood.org.tw/hospital/application-sb_registed.htm"],
+      "matches": [
+        "https://dh.blood.org.tw/hospital/application-sb_registed.htm"
+      ],
       "js": ["specialOrder.js"],
       "css": ["specialOrder.css"]
     }
