--- a/manifest.json
+++ b/manifest.json
@@ -3,6 +3,9 @@
   "name": "Blood Order Genius",
   "version": "1.0",
   "description": "A plugin helps you ordering blood products through 'https://dh.blood.org.tw/hospital/'",
+  "icons": {
+    "128": "icons/icon.png"
+  },
   "permissions": ["storage"],
   "action": {
     "default_popup": "popup.html"
