--- a/manifest.json
+++ b/manifest.json
@@ -6,7 +6,8 @@
   "icons": {
     "128": "icons/icon.png"
   },
-  "permissions": ["storage"],
+  "permissions": ["storage", "tabs", "scripting"],
+  "host_permissions":["https://dh.blood.org.tw/hospital/*"],
   "action": {
     "default_popup": "popup.html"
   },
