show notification on install

--- a/manifest.json
+++ b/manifest.json
@@ -6,7 +6,16 @@
   "icons": {
     "128": "icons/icon.png"
   },
-  "permissions": ["storage", "tabs", "scripting"],
+  "web_accessible_resources": [
+    {
+      "resources": ["icons/icon.png"],
+      "matches": ["<all_urls>"]
+    }
+  ],
+  "background": {
+    "service_worker": "scripts/background.js"
+  },
+  "permissions": ["storage", "tabs", "scripting", "notifications"],
   "host_permissions": ["https://dh.blood.org.tw/hospital/*"],
   "action": {
     "default_popup": "popup/popup.html"
