--- a/manifest.json
+++ b/manifest.json
@@ -47,6 +47,12 @@
     },
     {
       "matches": [
+        "https://dh.blood.org.tw/hospital/application-reuse_registed.htm"
+      ],
+      "js": ["scripts/reuse_registed.js"]
+    },
+    {
+      "matches": [
         "https://dh.blood.org.tw/hospital/",
         "https://dh.blood.org.tw/hospital/index.htm",
         "https://dh.blood.org.tw/hospital/index_1.htm"
